# space_station_god_game_proto_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: camera.rs  inhabitant.rs  item.rs  main.rs  music.rs  starfield.rs  station.rs
src/scenes/: game.rs  load.rs  mod.rs  paused.rs  quit.rs  save.rs  scene.rs  settings.rs  title.rs
src/station/: gridposition.rs  item.rs  mod.rs  pathfinding.rs  station.rs  tile.rs
