[package]
name = "space_station_god_game_proto_rust"
version = "0.1.0"
authors = ["Myles Grant <myles@mylesgrant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.12.0", features = ["mint"] }
ggez = "0.6.0-rc1"
cgmath = { version = "0.18.0", features = ["mint"] }
oorandom = "11.1.3"
getrandom = "0.2"
keyframe = "1.0.3"
rand = "0.8.3"
num = "0.3.1"
mint = "0.5.6"
uuid = { version = "0.8", features = ["serde", "v4"] }

# https://github.com/ggez/ggez/blob/master/docs/FAQ.md#imagesound-loading-and-font-rendering-is-slow
[profile.dev]
opt-level = 1
