[package]
name = "space_station_god_game_proto_rust"
version = "0.1.0"
authors = ["Myles Grant <myles@mylesgrant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.12", features = ["mint", "serde"] }
ggez = "0.7.0"
cgmath = { version = "0.18", features = ["mint"] }
oorandom = "11.1"
getrandom = "0.2"
keyframe = "1.1"
rand = "0.8"
num = "0.4"
mint = "0.5"
uuid = { version = "1.3", features = ["serde", "v4"] }
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# https://github.com/ggez/ggez/blob/master/docs/FAQ.md#imagesound-loading-and-font-rendering-is-slow
[profile.dev]
opt-level = 1
